销售记录显示错误

--- a/admin_num/WEB-INF/jsp/admin.html
+++ b/admin_num/WEB-INF/jsp/admin.html
@@ -95,7 +95,7 @@
   </div>
   <!-- 商品添加页面结束 -->
   <!-- 销售记录开始 -->
-  <div class="sale_record">
+  <div class="sale_record hide">
     <div class="sale_main">
       <div class="sale_title clearfix">
         <ul>
