--- a/main/WEB-INF/jsp/main.html
+++ b/main/WEB-INF/jsp/main.html
@@ -64,7 +64,7 @@
       <div class="btn-next">&gt;</div>
     </div>
   </div>
-  <div class="main-content">
+  <div class="main-content clearfix">
     <div class="skin" id="hufu" name="hufu">
       <div class="skin-top">
         护肤专区
