--- a/buy/WEB-INF/jsp/buy.html
+++ b/buy/WEB-INF/jsp/buy.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/user_login.css">
   <script src="../../js/lib/jquery-3.3.1.min.js"></script>
   <script src="../../js/user_login.js"></script>
+  <script src="../../js/buy.js"></script>
 </head>
 
 <body>
@@ -20,14 +21,65 @@
       <div class="left-logo">
         <a href="http://127.0.0.1:5500/main/WEB-INF/jsp/main.html"><img src="../../images/logo.png" alt=""></a>
       </div>
-
     </div>
     <div class="right">
       <div class="login">登&nbsp;录&nbsp;|&nbsp;注&nbsp;册</div>
     </div>
   </div>
   <!-- 头部结束 -->
+  <div class="line"></div>
+  <!-- buy-sale -->
+  <div class="buy-content">
+    <div class="buy-item clearfix">
+      <div class="buy-left">
+        <div class="top-img">
+          <img src="https://img.dmallcdn.com/20161112/b17624d1-65f7-44d9-9fbd-fae4666291d1_360x360H" alt="">
+        </div>
+        <div class="bottom-desc">
 
+        </div>
+      </div>
+
+      <div class="buy-right">
+        <div class="buy-name">
+          膜法世家樱aadadad桃补水睡眠面膜125g 补水面膜
+        </div>
+        <div class="buy-price clearfix">
+          <div class="ren">￥</div>
+          <div class="item-price">79.00</div>
+        </div>
+        <div class="num">
+          库存：<span class="item-num"></span>
+        </div>
+        <div class="buy-num clearfix">
+          <div class="title">数量:</div>
+          <div class="num-left">-</div>
+          <div class="num-mid">1</div>
+          <div class="num-right">+</div>
+        </div>
+        <div class="buy-button">
+          <div class="button">购买</div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- buy-sale -->
+
+  <!-- 声明 -->
+  <div class="zixun">
+    <img src="../../images/zixun.png" alt="">
+  </div>
+  <div class="zixun">
+      <img src="../../images/pinzhi.png" alt="">
+    </div>
+
+  <!-- 声明结束 -->
+  <div class="footer">
+    <div class="bottom">
+      <span>前往armani exchangePowered by YOOX NET-A-PORTER GROUP - Copyright © 2019 乔治阿玛尼 - All Rights Reserved</span>
+    </div>
+  </div>
   <!-- 登录注册 -->
   <div class="login-register hide">
     <div class="user-pannel">
