--- a/main/WEB-INF/jsp/main.html
+++ b/main/WEB-INF/jsp/main.html
@@ -94,7 +94,7 @@
           <div class="hufu-list-title">
             护肤排行
           </div>
-          <div class="hufu-list-content" >
+          <div class="hufu-list-content">
             <ul id="hufu-list">
               <li><a href="">1221212</a></li>
               <li><a href="">121212</a></li>
@@ -110,7 +110,7 @@
           <div class="hufu-list-title">
             美妆排行
           </div>
-          <div class="hufu-list-content" >
+          <div class="hufu-list-content">
             <ul id="meizhuang-list">
               <li><a href="">121212</a></li>
               <li><a href="">121212</a></li>
@@ -126,7 +126,7 @@
           <div class="hufu-list-title">
             香氛排行
           </div>
-          <div class="hufu-list-content" >
+          <div class="hufu-list-content">
             <ul id="xiangfen-list">
               <li><a href="">121212</a></li>
               <li><a href="">121212</a></li>
@@ -209,7 +209,9 @@
 
   <!-- 咨询定位 -->
   <div class="contact">
-    <img src="../../images/contact.png" alt="">
+    <a href="tencent://message/?uin=911409649&amp;Site=化妆&amp;Menu=yes">
+      <img src="../../images/contact.png" alt="">
+    </a>
   </div>
   <!-- 咨询定位结束 -->
 </body>
