--- a/main/WEB-INF/jsp/main.html
+++ b/main/WEB-INF/jsp/main.html
@@ -27,6 +27,12 @@
         </ul>
       </div>
     </div>
+    <div class="mid">
+      <div class="search">
+        <div class="search-value"><input type="text" class="search-input-value"></div>
+        <div class="search-button">搜索</div>
+      </div>
+    </div>
     <div class="right">
       <div class="login">登&nbsp;录&nbsp;|&nbsp;注&nbsp;册</div>
     </div>
@@ -62,6 +68,14 @@
     </div>
   </div>
   <div class="main-content clearfix">
+    <div class="skin hide" id="search-item">
+      <div class="skin-top">
+        商品一览
+      </div>
+      <div class="skin-content clearfix" id="search-content">
+
+      </div>
+    </div>
     <div class="skin" id="hufu" name="hufu">
       <div class="skin-top">
         护肤专区
@@ -218,5 +232,6 @@
 <script src="../../js/slider.js"></script>
 <script src="../../js/user_login.js"></script>
 <script src="../../js/content.js"></script>
+<script src="../../js/search.js"></script>
 
 </html>
