替换登录注册js

--- a/buy/WEB-INF/jsp/buy.html
+++ b/buy/WEB-INF/jsp/buy.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="../../css/buy.css">
   <link rel="stylesheet" href="../../css/user_login.css">
   <script src="../../js/lib/jquery-3.3.1.min.js"></script>
-  <script src="../../js/user_login.js"></script>
+  <!-- 引用主页面的注册js -->
+  <script src="../../../main/js/user_login.js"></script>
   <script src="../../js/buy.js"></script>
 </head>
 
