--- a/main/WEB-INF/jsp/main.html
+++ b/main/WEB-INF/jsp/main.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/user_login.css">
+  <link rel="stylesheet" href="./contact.css">
 </head>
 
 <body>
@@ -223,9 +224,20 @@
 
   <!-- 咨询定位 -->
   <div class="contact">
-    <a href="tencent://message/?uin=911409649&amp;Site=化妆&amp;Menu=yes">
+
+    <div class="kuang">
+      <div class="top">
+        <img src="../../images/contact.png" alt="">
+      </div>
+      <div class="bottom">
+        <a href="tencent://message/?uin=980422820&amp;Site=化妆&amp;Menu=yes"><div class="bottom-top name">李老师</div></a>
+        <a href="tencent://message/?uin=911409649&amp;Site=化妆&amp;Menu=yes"><div class="bottom-bottom name">郑老师</div></a>
+      </div>
+    </div>
+    <!-- <a href="tencent://message/?uin=911409649&amp;Site=化妆&amp;Menu=yes">
       <img src="../../images/contact.png" alt="">
-    </a>
+    </a> -->
+
   </div>
   <!-- 咨询定位结束 -->
 </body>
